# Coding-Buddy

./: .env.example  README.md  pyproject.toml
app/: main.py
app/agent/: agent_creator.py  base_agent.py
app/agent/error_extractor/: agent.py  server.py
app/agent/orchestrator/: agent.py  server.py
app/agent/stackredhub/: agent.py  server.py
app/client/: agent_client.py
app/schema/: agent_message.py
app/tools/: tool_server.py
